[gd_scene load_steps=11 format=3 uid="uid://wyvlumqnewlu"]

[ext_resource type="Texture2D" uid="uid://lsqex15mv1k5" path="res://assets/GFX/PNG/Tiles/tile_473.png" id="1_tmy41"]
[ext_resource type="Script" path="res://doors/door.gd" id="1_vic2a"]
[ext_resource type="AudioStream" uid="uid://bq56pa6nplffm" path="res://assets/SFX/doorOpen_1.ogg" id="2_a0qe2"]
[ext_resource type="AudioStream" uid="uid://1sqpviymt010" path="res://assets/SFX/doorClose_1.ogg" id="3_6f61m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7g7i"]
size = Vector2(64, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7sccv"]
size = Vector2(64, 18)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_c8in8"]
polygon = PackedVector2Array(-32, -9, 32, -9, 32, 9, -32, 9)

[sub_resource type="Animation" id="Animation_soeu4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_cowl7"]
resource_name = "open"
length = 5.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-64, 2.08165e-12), Vector2(-64, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AudioStreamPlayer2D:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_a0qe2"), ExtResource("3_6f61m")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_a0qe2")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_6f61m")
}],
"times": PackedFloat32Array(0, 4)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4gqov"]
_data = {
"RESET": SubResource("Animation_soeu4"),
"open": SubResource("Animation_cowl7")
}

[node name="Door" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_vic2a")

[node name="CharacterDetector" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u7g7i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("1_tmy41")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
visible = false
shape = SubResource("RectangleShape2D_7sccv")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D"]
z_index = 1
occluder = SubResource("OccluderPolygon2D_c8in8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4gqov")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
